--- a/example/src/css/index.less
+++ b/example/src/css/index.less
@@ -1,1 +1,22 @@
-body { dislpay: flex }
+body {
+    display: flex;
+    flex: 1;
+    align-self: flex-end;
+    align-self: flex-start;
+    align-self: center;
+    align-self: stretch;
+    flex-wrap: wrap;
+    flex-direction: row;
+    flex-direction: row-reverse;
+    flex-direction: column;
+    flex-direction: column-reverse;
+    align-items: center;
+    align-items: stretch;
+    align-items: flex-end;
+    align-items: flex-start;
+    justify-content: center;
+    justify-content: flex-end;
+    justify-content: flex-start;
+    justify-content: space-around;
+    justify-content: space-between;
+}
