--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -2,10 +2,6 @@
 ---
 
 @import "{{ site.theme }}";
-@import url("https://fonts.googleapis.com/css?family=Karla");
-@import url("https://fonts.googleapis.com/css?family=Maven+Pro");
-@import url("https://fonts.googleapis.com/css?family=Nobile");
-@import url("https://fonts.googleapis.com/css?family=Oxygen");
 @import url("https://fonts.googleapis.com/css?family=Ubuntu");
 @import url('https://fonts.googleapis.com/css?family=Ubuntu+Mono');
 
@@ -14,7 +10,7 @@ h1>em {
 }
 
 body {
-    font-family: "Maven Pro", sans-serif;
+    font-family: "Ubuntu", sans-serif;
 }
 
 header h1,
@@ -25,4 +21,8 @@ pre, code, pre *, code * {
 
 code.highlighter-rouge {
     color: #90a959;
+}
+
+.main_content a {
+    font-variant: small-caps;
 }
