Update mono font

--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -3,7 +3,7 @@
 
 @import "{{ site.theme }}";
 @import url('https://fonts.googleapis.com/css?family=Lato');
-@import url('https://fonts.googleapis.com/css?family=Ubuntu+Mono');
+@import url('https://fontlibrary.org/face/courier-code');
 
 h1>em {
     display: none;
@@ -17,7 +17,8 @@ body {
 header h1,
 h1, h2, h3, h4, h5,
 pre, code, pre *, code * {
-    font-family: "Ubuntu Mono", monospace;
+    font-family: CourierCodeRoman, monospace;
+    letter-spacing: -0.05em;
 }
 
 li {
