--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -3,7 +3,7 @@
 
 @import "{{ site.theme }}";
 @import url('https://fonts.googleapis.com/css?family=Neucha');
-@import url('https://fontlibrary.org/face/courier-code');
+@import url('https://fontlibrary.org/face/m-m-type-1');
 
 h1>em {
     display: none;
@@ -17,7 +17,7 @@ body {
 header h1,
 h1, h2, h3, h4, h5,
 pre, code, pre *, code * {
-    font-family: CourierCodeRoman, monospace;
+    font-family: 'M1mregular', monospace;
     letter-spacing: -0.05em;
 }
 
